# candle-birnn

./: .gitattributes  .gitignore  Cargo.toml  README.md  README_zh.md  bi_lstm_batch_false.pt  bi_lstm_batch_true.pt  bi_lstm_test.pt  lstm_batch_false.pt  lstm_batch_true.pt  lstm_test.pt  simple.py  test.py
src/: lib.rs  mylstm.rs
