[package]
name = "candle-birnn"
version = "0.2.2"
edition = "2021"
description = "implement Pytorch LSTM and BiDirectional LSTM with Candle"
readme = "README.md"
repository = "https://github.com/kigichang/candle-birnn"
license-file = "LICENSE"
keywords = ["candle", "lstm", "pytorch"]


[dependencies]
accelerate-src = { workspace = true , optional = true }
intel-mkl-src = { workspace = true, optional = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[features]
default = []
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl"]