[package]
name = "candle-birnn"
version = "0.2.2"
edition = "2021"
description = "implement Pytorch LSTM and BiDirectional LSTM with Candle"
readme = "README.md"
repository = "https://github.com/kigichang/candle-birnn"
license-file = "LICENSE"
keywords = ["candle", "lstm", "pytorch"]

[[bin]]
name = "lstm_opt"

[dependencies]
accelerate-src = { version = "0.3.2", optional = true }
intel-mkl-src = { version = "0.8.1", optional = true }
candle-core = { git="https://github.com/huggingface/candle", rev = "736d8eb7521dd48e777827848f2b9ed8a7473571"}
candle-nn = { git="https://github.com/huggingface/candle", rev = "736d8eb7521dd48e777827848f2b9ed8a7473571"}
anyhow = "1.0.86"


[features]
default = []
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl"]