[package]
name = "candle-birnn"
version = "0.2.3"
edition = "2021"
description = "implement Pytorch LSTM and BiDirectional LSTM with Candle"
readme = "README.md"
repository = "https://github.com/kigichang/candle-birnn"
license-file = "LICENSE"
keywords = ["candle", "lstm", "pytorch"]


[dependencies]
candle-core = "0.7.0"
candle-nn = "0.7.0"
candle-metal-kernels = {version = "0.7.0", optional = true}
candle-kernels = {version = "0.7.0", optional = true}

[dev-dependencies]
anyhow = "1.0.86"

[features]
default = []
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]
mkl = ["candle-core/mkl", "candle-nn/mkl"]
metal = ["candle-core/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
